--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,11 +25,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Redux App</title>
+    <title>Soothe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <div class="weather-icon"> <img src="icons/unknown.png"/></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
